# bool-mm

./: README.md  pyproject.toml  requirements.txt  setup.py
doc/coverage/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_boolean_matrix_multiplier_py.html  z_145eef247bfb46b6_k_bounded_multiplier_py.html  z_145eef247bfb46b6_strassen_multiplier_py.html
doc/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_boolean_matrix_multiplier_py.html  z_145eef247bfb46b6_k_bounded_multiplier_py.html  z_145eef247bfb46b6_run_experiements_py.html  z_145eef247bfb46b6_run_experiments_py.html  z_145eef247bfb46b6_strassen_multiplier_py.html
science/: bin-mm.tex  bool-mm.tex
src/: boolean_matrix_multiplier.py  k_bounded_multiplier.py  results.txt  run_experiments.py
tests/: conftest.py  test_boolean_matrix_multiplier.py  test_k_bounded_multiplier.py  test_strassen_multiplier.py
